# CircuitPython_VL53LxCX

./: .pre-commit-config.yaml  LICENSE  README.rst  README.rst.license  REUSE.toml  pyproject.toml  requirements.txt  vl53lxcx.py
.devcontainer/: devcontainer.json
.github/workflows/: release_gh.yml
circuitpython_vl53l8cx_sensebox/: boot_out.txt  code.py
circuitpython_vl53l8cx_sensebox/lib/vl53l5cx/: __init__.py  cp.py
docs/: api.rst  conf.py  examples.rst  index.rst  index.rst.license
examples/: README.md  vl53lxcx_simpletest.py
src/: __init__.py  _config_file.py
vl53lxcx/: __init__.py  vl53lxcx.py
