# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2025 senseBox for senseBox
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-vl53lxcx"
description = "CircuitPython driver for VL53L5CX and VL53L8CX ToF sensors"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "senseBox", email = "info@sensebox.de"}
]
urls = {Homepage = "https://github.com/sensebox/CircuitPython_VL53LxCX"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "vl53lxcx",
    "VL53L5CX",
    "VL53L8CX",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["vl53lxcx"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
